# LlamaFinance

./: .env.testnet  .gitignore  Cargo.toml  README.md
contract/artifacts/: .gitignore
contract/src/: contract.rs
contracts/finance/: Cargo.toml
contracts/finance/examples/: schema.rs
contracts/finance/schema/: execute_msg.json  query_msg.json
contracts/finance/src/: contract.rs  error.rs  external.rs  lib.rs  liquidation.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/oracle/: Cargo.toml  README.md
contracts/oracle/examples/: schema.rs
contracts/oracle/schema/: execute_msg.json  instantiate_msg.json  price_response.json  prices_response.json  query_msg.json
contracts/oracle/src/: constants.rs  contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs
devops/: build.sh  create_coins.sh  deploy.sh  execute_faucet.sh  init_finance.sh  init_oracle.sh
frontend/: .env  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/components/: Card.vue  Navbar.vue  NumberInput.vue  WalletButton.vue
frontend/src/components/ThemeChange/: data.ts  index.vue  types.ts
frontend/src/components/modals/: BaseModal.vue  BorrowModal.vue  CollateralModal.vue  DepositModal.vue  ModalsController.vue  ReduceCollateralModal.vue  RepayModal.vue  TxnSuccessModal.vue  WithdrawModal.vue
frontend/src/components/tables/: AssetsTable.vue  BaseTable.vue  BorrowsTable.vue  CollateralTable.vue  LendingTable.vue  YourBorrowsTable.vue  YourCollateralsTable.vue  YourDepositsTable.vue
frontend/src/config/: index.ts
frontend/src/coreum/: query.ts  tx.ts
frontend/src/layouts/: index.vue
frontend/src/router/: index.ts
frontend/src/sdk/: finance.ts  index.ts  oracle.ts
frontend/src/services/: keplr.ts
frontend/src/store/: accountStore.ts  index.ts
frontend/src/utils/: conversion.ts  formatAmount.ts  formatAsset.ts  index.ts  openModal.ts  validation.ts
frontend/src/views/: Admin.vue  Deposit.vue  ErrorPage.vue  Home.vue  Loans.vue  StoreTest.vue
frontend/types/: auto-imports.d.ts  components.d.ts
