[workspace]
members = ["contracts/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[profile.release.package.oracle]
codegen-units = 1
incremental = false

[profile.release.package.finance]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = false
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
