[package]
name = "oracle"
description = "An Oracle"
version = "0.1.0"
authors = ["Lukasz Ptak <lukasz@ulam.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/StylishTriangles/LlamaFinance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
thiserror = { version = "1.0.23" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
cw-storage-plus = "1.1.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
