[package]
name = "oracle"
description = "An Oracle"
version = "0.1.0"
authors = ["Lukasz Ptak <lukasz@ulam.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/StylishTriangles/LlamaFinance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
thiserror = { version = "1.0.31" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw-storage-plus = "1.1.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
